# psr-test

./: CHANGELOG.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: main.py  numbers.py  strings.py  test_main.py
