[project]
name = "versioning-test"
version = "1.0.0"
description = "A small project to test versioning and conventional commits"
readme = "README.md"
authors = [{ name = "Gemini Bot", email = "bot@example.com" }]
license = { text = "MIT" }
dependencies = []

[tool.semantic_release]
branch = "master"
major_on_zero = false
commit_message = "chore(release): {version} [skip ci]"
version_variables = [
    "pyproject.toml:project.version"
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "refactor", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "refactor"]
