[project]
name = "versioning-test"
version = "1.1.0"
description = "A small project to test versioning and conventional commits"
readme = "README.md"
authors = [{ name = "Gemini Bot", email = "bot@example.com" }]
license = { text = "MIT" }
dependencies = []

[tool.semantic_release]
commit_message = "chore(release): v{version}"
version_toml = [
    "pyproject.toml:project.version"
]
major_on_zero = false
build_command = "pip install build && python -m build"

[tool.semantic_release.branches.main]
match = "master"
order = 0

[tool.semantic_release.changelog]
file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "refactor", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "refactor"]
default_bump_level = 0

[tool.semantic_release.publish]
upload_to_vcs_release = true
